fix(angular): missing background color on card picker and turn summary

--- a/angular/src/app/pages/ongoing-game-page/turn-summary/turn-summary.component.scss
+++ b/angular/src/app/pages/ongoing-game-page/turn-summary/turn-summary.component.scss
@@ -1,7 +1,3 @@
-:host {
-  background-color: var(--fbc-light-gray);
-}
-
 .card-border {
   height: 75px;
   &.muted {
